Calculate private key

--- a/Encryptor.ipynb
+++ b/Encryptor.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Getting the message and translating it into numbers"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "source": [
@@ -54,6 +61,176 @@
      "metadata": {},
      "execution_count": 25
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "source": [
+    "# Create a list of all letters\n",
+    "letter_list = []\n",
+    "for string in message_list:\n",
+    "    for letter in string:\n",
+    "        letter_list.append(letter)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "source": [
+    "translation_dict = {'a':1, 'b':2,'c':3, 'd':4, 'e':5,'f':6,'g':7,'h':8,'i':9,'j':10,'k':11,'l':12,'m':13,'n':14,'o':15,'p':16,'q':17,'r':18,'s':19,'t':20,'u':21,'v':22,'w':23,'x':24,'y':25,'z':26,' ':27}\n",
+    "translation_dict"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'a': 1,\n",
+       " 'b': 2,\n",
+       " 'c': 3,\n",
+       " 'd': 4,\n",
+       " 'e': 5,\n",
+       " 'f': 6,\n",
+       " 'g': 7,\n",
+       " 'h': 8,\n",
+       " 'i': 9,\n",
+       " 'j': 10,\n",
+       " 'k': 11,\n",
+       " 'l': 12,\n",
+       " 'm': 13,\n",
+       " 'n': 14,\n",
+       " 'o': 15,\n",
+       " 'p': 16,\n",
+       " 'q': 17,\n",
+       " 'r': 18,\n",
+       " 's': 19,\n",
+       " 't': 20,\n",
+       " 'u': 21,\n",
+       " 'v': 22,\n",
+       " 'w': 23,\n",
+       " 'x': 24,\n",
+       " 'y': 25,\n",
+       " 'z': 26,\n",
+       " ' ': 27}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "source": [
+    "# Translate letters into numbers\n",
+    "translated = []\n",
+    "for letter in letter_list:\n",
+    "    for key, val in translation_dict.items():\n",
+    "        if letter == key:\n",
+    "            translated.append(val)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Getting RSA key pair"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "source": [
+    "# Decide p and q\n",
+    "p = 23\n",
+    "q = 47\n",
+    "n = p*q\n",
+    "func_n = (p - 1)*(q - 1)\n",
+    "print(n, func_n)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1081 1012\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "source": [
+    "e = 5\n",
+    "# Check if n is divisible by e\n",
+    "import math\n",
+    "math.gcd(func_n,e)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 40
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "source": [
+    "print('My public key is ',n , 'and ', e)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "My public key is  1081 and  5\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "source": [
+    "# Calculate private key\n",
+    "i = 2\n",
+    "d = int((i*func_n + 1)/e)\n",
+    "print(d)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "405\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Encrypting the message"
    ],
    "metadata": {}
   },
