--- a/Encryptor.ipynb
+++ b/Encryptor.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "source": [
     "# Step 1\n",
     "# Import the message_to_encrypt.txt file\n",
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "source": [
     "# Store messages in a list\n",
     "message_list = []\n",
     "for line in message_file:\n",
-    "    message_list.append(line.strip('\\n'))\n",
+    "    message_list.append(line)\n",
     "    print(line)\n"
    ],
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "source": [
     "message_list"
    ],
@@ -55,18 +55,18 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "['i have a pet parrot', 'it likes to gossip', 'and eat sunflower seeds']"
+       "['i have a pet parrot\\n', 'it likes to gossip\\n', 'and eat sunflower seeds\\n']"
       ]
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 67
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 68,
    "source": [
     "# Create a list of all letters\n",
     "letter_list = []\n",
@@ -79,9 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 70,
    "source": [
-    "translation_dict = {'a':1, 'b':2,'c':3, 'd':4, 'e':5,'f':6,'g':7,'h':8,'i':9,'j':10,'k':11,'l':12,'m':13,'n':14,'o':15,'p':16,'q':17,'r':18,'s':19,'t':20,'u':21,'v':22,'w':23,'x':24,'y':25,'z':26,' ':27}\n",
+    "translation_dict = {'a':1, 'b':2,'c':3, 'd':4, 'e':5,'f':6,'g':7,'h':8,'i':9,'j':10,'k':11,'l':12,'m':13,'n':14,'o':15,'p':16,'q':17,'r':18,'s':19,'t':20,'u':21,'v':22,'w':23,'x':24,'y':25,'z':26,' ':27,'\\n':28}\n",
     "translation_dict"
    ],
    "outputs": [
@@ -115,24 +115,25 @@
        " 'x': 24,\n",
        " 'y': 25,\n",
        " 'z': 26,\n",
-       " ' ': 27}"
+       " ' ': 27,\n",
+       " '\\n': 28}"
       ]
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 70
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 71,
    "source": [
     "# Translate letters into numbers\n",
     "translated = []\n",
     "for letter in letter_list:\n",
     "    for key, val in translation_dict.items():\n",
-    "        if letter == key:\n",
+    "        if letter.lower() == key:\n",
     "            translated.append(val)"
    ],
    "outputs": [],
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 72,
    "source": [
     "# Decide p and q\n",
     "p = 23\n",
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 73,
    "source": [
     "e = 5\n",
     "# Check if n is divisible by e\n",
@@ -185,23 +186,23 @@
       ]
      },
      "metadata": {},
-     "execution_count": 40
+     "execution_count": 73
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 74,
    "source": [
-    "print('My public key is ',n , 'and ', e)"
+    "print('My public key is',n , 'and', e)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "My public key is  1081 and  5\n"
+      "My public key is 1081 and 5\n"
      ]
     }
    ],
@@ -209,19 +210,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 75,
    "source": [
     "# Calculate private key\n",
     "i = 2\n",
     "d = int((i*func_n + 1)/e)\n",
-    "print(d)"
+    "print('My private key is ',d)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "405\n"
+      "My private key is  405\n"
      ]
     }
    ],
@@ -236,9 +237,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 76,
+   "source": [
+    "# Create cipher list\n",
+    "c_list = []\n",
+    "for num in translated:\n",
+    "    c = (num**e) % n\n",
+    "    c_list.append(c)\n",
+    "\n",
+    "c_list\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[675,\n",
+       " 794,\n",
+       " 338,\n",
+       " 1,\n",
+       " 505,\n",
+       " 963,\n",
+       " 794,\n",
+       " 1,\n",
+       " 794,\n",
+       " 6,\n",
+       " 963,\n",
+       " 240,\n",
+       " 794,\n",
+       " 6,\n",
+       " 1,\n",
+       " 1061,\n",
+       " 1061,\n",
+       " 513,\n",
+       " 240,\n",
+       " 848,\n",
+       " 675,\n",
+       " 240,\n",
+       " 794,\n",
+       " 202,\n",
+       " 675,\n",
+       " 1063,\n",
+       " 963,\n",
+       " 609,\n",
+       " 794,\n",
+       " 240,\n",
+       " 513,\n",
+       " 794,\n",
+       " 592,\n",
+       " 513,\n",
+       " 609,\n",
+       " 609,\n",
+       " 675,\n",
+       " 6,\n",
+       " 848,\n",
+       " 1,\n",
+       " 567,\n",
+       " 1024,\n",
+       " 794,\n",
+       " 963,\n",
+       " 1,\n",
+       " 240,\n",
+       " 794,\n",
+       " 609,\n",
+       " 83,\n",
+       " 567,\n",
+       " 209,\n",
+       " 202,\n",
+       " 513,\n",
+       " 69,\n",
+       " 963,\n",
+       " 1061,\n",
+       " 794,\n",
+       " 609,\n",
+       " 963,\n",
+       " 963,\n",
+       " 1024,\n",
+       " 609,\n",
+       " 848]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 76
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Decrypting the message"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "source": [
+    "# Create a decrypted list\n",
+    "decrypted_list = []\n",
+    "for num in c_list:\n",
+    "    decrypted_num = (num**d) % n\n",
+    "    decrypted_list.append(decrypted_num)"
+   ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "source": [
+    "decrypted_letters = []\n",
+    "for num in decrypted_list:\n",
+    "    for key,val in translation_dict.items():\n",
+    "        if num == val:\n",
+    "            decrypted_letters.append(key)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "source": [
+    "\n",
+    "decrypted_message = \"\".join(decrypted_letters)\n",
+    "print(decrypted_message)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "i have a pet parrot\n",
+      "it likes to gossip\n",
+      "and eat sunflower seeds\n",
+      "\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
